# tgfolder_export

./: .env.sample  .gitignore  CLAUDE.md  LICENSE  Makefile  README.md  env.sample  export.py  pyproject.toml  requirements_dev.txt  test_export.py  tgf-list.txt
var/: config.yml
