[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tgfolder_export"
version = "0.0.1"
description = "Export Telegram folder contents as JSON"
readme = "README.md"
license = {text = "MIT"}
authors = [{name = "AABur"}]
requires-python = ">=3.11"
dependencies = [
    "pyyaml",
    "telethon",
]

[project.optional-dependencies]
dev = [
    "mypy",
    "ruff", 
    "types-pyyaml",
]

[project.scripts]
tgfolder_export = "export:main"

[tool.ruff]
target-version = "py311"
line-length = 88
extend-exclude = ["var"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings  
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long, handled by formatter
]

[tool.ruff.lint.per-file-ignores]
"export.py" = ["T201"]  # Allow print statements in main script

[tool.mypy]
python_version = "3.11"
strict = true

[[tool.mypy.overrides]]
module = "telethon.*"
ignore_missing_imports = true
