[project]
name = "tgfolder_export"
version = "0.1.0"
description = "Export Telegram folder contents as JSON"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "AABur" }]
requires-python = ">=3.11"
dependencies = ["python-dotenv", "telethon", "tqdm"]

[dependency-groups]
dev = [
    "mypy>=1.13.0",
    "pytest>=8.4.0",
    "pytest-cov>=6.1.0",
    "pytest-mock>=3.14.1",
    "ruff>=0.8.0",
    "types-tqdm>=4.66.0",
]

[project.scripts]
tgfolder_export = "export:main"

[tool.ruff]
target-version = "py311"
line-length = 88

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long, handled by formatter
]

[tool.ruff.lint.per-file-ignores]
"test_*.py" = ["B011"]  # Allow assert in tests

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.11"
strict = true
show_error_codes = true
pretty = true

[[tool.mypy.overrides]]
module = ["telethon.*", "dotenv.*"]
ignore_missing_imports = true

[tool.coverage.run]
source = ["export"]
branch = true

[tool.coverage.report]
show_missing = true
fail_under = 85

[tool.pytest.ini_options]
addopts = ["--strict-markers", "--tb=short"]
testpaths = ["."]
